--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.5.0",
+    "i18next": "^24.2.3",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
     "react-pdf": "^7.7.3",
     "tailwind-merge": "^3.0.2",
-    "tw-animate-css": "^1.2.4"
+    "tw-animate-css": "^1.2.4",
+    "zod": "^3.24.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
